# LearnSmith

./: .env.example  .gitignore  LICENSE  README.md  demo_integration.py  pyproject.toml
.github/workflows/: deploy.yml
docs/: 1_basic_idea.md  2_user_flow.md  3_architecture_overview.md  4_modules_structure.md  task_list.md
docs/modules/: 1_architect.md  2_adaptive_architect.md  3_builder.md  4_mentor.md
docs/tech/: 1_architect_contract.md  2_builder_contract.md  3_api_documentation.md  4_mentor_contract.md
src/mentor_app/: __init__.py  main.py  migrate.py  models.py
src/mentor_app/api/: __init__.py  courses.py  modules.py
src/mentor_app/architect/: __init__.py  models.py  prompts.py  service.py
src/mentor_app/auditor/: __init__.py  analytics.py  reporter.py
src/mentor_app/builder/: __init__.py  generator.py  models.py  quiz_factory.py  service.py
src/mentor_app/infrastructure/: __init__.py  database.py  llm_client.py  models.py  repositories.py
src/mentor_app/mentor/: __init__.py  coordinator.py  mentor_service.py  session_mgr.py
src/mentor_app/migrations/: 001_create_tables.sql
tests/: test_architect.py  test_mentor.py
ui/: README.md
